--- a/JDy6ohy9vE5AZ74ni.html
+++ b/JDy6ohy9vE5AZ74ni.html
@@ -245,9 +245,9 @@ footer {
   <p>© 2024 GLUBO, Inc. All rights reserved.</p>
   <p>Headquarters: San Francisco, CA</p>
   <div class="footer-links">
-    <a href="https://glubo.com/about">About</a> |
+    <a href="https://www.youtube.com/channel/UCJvBXBYPWE1aIlrM0r1Ilhw">About</a> |
     <a href="https://glubo.com/games">Games</a> |
-    <a href="https://glubo.com/contact">Contact</a>
+    <a href="https://www.youtube.com/channel/UCJvBXBYPWE1aIlrM0r1Ilhw">Contact</a>
   </div>
 </footer>
 
