--- a/JDy6ohy9vE5AZ74ni.html
+++ b/JDy6ohy9vE5AZ74ni.html
@@ -246,7 +246,7 @@ footer {
   <p>Headquarters: San Francisco, CA</p>
   <div class="footer-links">
     <a href="https://www.youtube.com/channel/UCJvBXBYPWE1aIlrM0r1Ilhw">About</a> |
-    <a href="https://glubo.com/games">Games</a> |
+    <a href="https://glubo.com/games">Store</a> |
     <a href="https://www.youtube.com/channel/UCJvBXBYPWE1aIlrM0r1Ilhw">Contact</a>
   </div>
 </footer>
