--- a/index.html
+++ b/index.html
@@ -245,9 +245,8 @@ footer {
   <p>© 2024 GLUBO, Inc. All rights reserved.</p>
   <p>Headquarters: San Francisco, CA</p>
   <div class="footer-links">
-    <a href="https://www.youtube.com/channel/UCJvBXBYPWE1aIlrM0r1Ilhw">About</a> |
+    <a href="https://devincreates62.github.io/Glubo-About/">About</a> |
     <a href="https://devincreates62.github.io/Glubo-Store/">Store</a> |
-    <a href="https://www.youtube.com/channel/UCJvBXBYPWE1aIlrM0r1Ilhw">Contact</a>
   </div>
 </footer>
 
